# scope-lock

./: CHANGELOG.md  Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: minimal-supported-version.yml  push-check.yml  release-plz.yml
examples/: boxed.rs  ref_once.rs  references.rs
src/: core.rs  lib.rs  pointer_like.rs  ref_once.rs
src/core/: erase.rs
src/extended/: func.rs  future.rs  mod.rs  sync.rs
src/pointer_like/: erased_static.rs
tests/: composed.rs  stacked_borrows_data_race.rs
