[package]
name = "scope-lock"
version = "0.3.1"
edition = "2024"
# TODO: elaborate
description = "Safely extend lifetimes"
# TODO: Apache 2.0
license = "MIT"
repository = "https://github.com/zetanumbers/scope-lock"
rust-version = "1.85"

[package.metadata.cargo-semver-checks.lints]
struct_now_doc_hidden = "warn"
